src/main/java/com/example/l/ex2/bad/Bird.java
package com.example.l.ex2.bad;

public class Bird {
    public void fly(){
        System.out.println("flying");
    }
}
